Bug 934209 - Alternate keys list overflows
Change logic when building alternate menu to follow the
recommendation and add CSS to make the menu visible.

--- a/apps/keyboard/style/keyboard.css
+++ b/apps/keyboard/style/keyboard.css
@@ -259,6 +259,21 @@ button::-moz-focus-inner {
 }
 
 /* Alt menu enabled */
+.kbr-menu-one-rows {
+  top: -6rem;
+  height: 6rem;
+}
+
+.kbr-menu-two-rows {
+  top: -12rem;
+  height: 12rem;
+}
+
+.kbr-menu-three-rows {
+  top: -18rem;
+  height: 18rem;
+}
+
 .keyboard-key.highlighted.kbr-menu-on > .visual-wrapper > .key-element {
   background: none;
 }
@@ -293,14 +308,13 @@ and displays the list of alternatives. */
 #keyboard-accent-char-menu {
   display: none;
   position: absolute;
-  top: -6rem;
-  height: 6rem;
   font-size: 0;
   border-radius: 3rem;
   background-color: #00aacc;
   overflow: hidden;
   white-space: nowrap;
   left: -1.2rem; /* because the first child is 1.2rem wider than others */
+  line-height: 0;
 }
 
 #keyboard-accent-char-menu.show {
@@ -318,8 +332,7 @@ and displays the list of alternatives. */
 }
 
 /* if it is the first or last key in the accent menu make it wider */
-#keyboard-accent-char-menu .keyboard-key:first-child,
-#keyboard-accent-char-menu .keyboard-key:last-child {
+#keyboard-accent-char-menu .keyboard-key .alternative-key-on-border {
   min-width: 4.2rem;
 }
 
@@ -356,12 +369,8 @@ and displays the list of alternatives. */
   color: #fff;
 }
 
-#keyboard-accent-char-menu .keyboard-key:first-child > .visual-wrapper > .key-element {
+#keyboard-accent-char-menu .keyboard-key > .visual-wrapper > .key-element .alternative-key-on-border {
   padding-left: 0.5rem;
-}
-
-#keyboard-accent-char-menu .keyboard-key:last-child > .visual-wrapper > .key-element {
-  padding-right: 0.5rem;
 }
 
 /* Highlighted special accent characters. These keys appear in the popover
